Updated name for test

--- a/_data/core_members.yml
+++ b/_data/core_members.yml
@@ -18,7 +18,7 @@
   photo: wangchiew.JPG
   web: https://wangchiew.github.io
   info: "Wang-Chiew is a research scientist at Facebook AI. She co-leads the <b>INFORM</b> and <b>ORGANIZE</b> actions at D&I in DB"
-- name: Sourav Bhowmick
+- name: Sourav S Bhowmick
   photo: sourav.jpg
   web: https://personal.ntu.edu.sg/assourav/
   info: "Sourav is an associate professor at Nanyang Technological University. He co-leads the <b>INFORM</b> actions at D&I in DB"
